--- a/css/style.jogo.css
+++ b/css/style.jogo.css
@@ -1,4 +1,4 @@
-#jogo 
+#jogo
 {
 	position: relative;
 	width: 1200px;
@@ -6,37 +6,52 @@
 	margin: 0 auto;
 }
 
-#cards 
+#cards
 {
-	position: relative;	
+	position: relative;
 	width: 1100px;
 	height: 500px;
 	left: 0;
 	top: 0;
 }
 
-.card 
+.card-h
 {
 	-webkit-perspective: 600;
 	width: 160px;
 	height: 120px;
-	
+
 	position: absolute;
-	
+
 	-moz-transition: all .3s;
 	-webkit-transition: all .3s;
 	-ms-transition: all 4.3s;
-	
+
 	transition: all .3s;
 }
 
-.face 
+.card-v
+{
+	-webkit-perspective: 600;
+	width: 80px;
+	height: 120px;
+
+	position: absolute;
+
+	-moz-transition: all .3s;
+	-webkit-transition: all .3s;
+	-ms-transition: all 4.3s;
+
+	transition: all .3s;
+}
+
+.face
 {
 	border-radius: 10px;
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	
+
 	-moz-transition-property: opacity, -moz-transform, -moz-box-shadow;
 	-moz-transition-duration: .3s;
 	-ms-transition-property: opacity, -ms-transform, -ms-box-shadow;
@@ -45,33 +60,33 @@
 	-webkit-transition-duration: .3s;
 	transition-property: opacity, transform, box-shadow;
 	transition-duration: .3s;
-	
+
 	-moz-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
-	
+
 }
 
 .front
- {	
+ {
 	background: #999 url(../imgs/cartas.png) 0 0px;
 	z-index: 10;
 }
 
-.back 
+.back
 {
 	background: #efefef url(../imgs/cartas.png);
-	
+
 	-moz-transform: rotate3d(0,1,0,-180deg);
 	-ms-transform: rotate3d(0,1,0,-180deg);
 	-webkit-transform: rotate3d(0,1,0,-180deg);
 	transform: rotate3d(0,1,0,-180deg);
-	
+
 	z-index: 8;
 }
 
-.card:hover .face
+.card-v:hover .card-h:hover .face
 {
 	-webkit-box-shadow: 0 0 20px #aaa;
 	-moz-box-shadow: 0 0 20px #aaa;
@@ -84,7 +99,7 @@
 	-webkit-box-shadow: 0 0 20px #aaa;
 	-moz-box-shadow: 0 0 20px #aaa;
 	-ms-box-shadow: 0 0 20px #aaa;
-	box-shadow: 0 0 10px #aaa;		
+	box-shadow: 0 0 10px #aaa;
 }
 
 .card-flipped .front
@@ -93,7 +108,7 @@
 	-ms-transform: rotate3d(0,1,0,180deg);
 	-webkit-transform: rotate3d(0,1,0,180deg);
 	transform: rotate3d(0,1,0,180deg);
-	
+
 	z-index: 8;
 }
 
@@ -103,68 +118,130 @@
 	-ms-transform: rotate3d(0,1,0,0deg);
 	-webkit-transform: rotate3d(0,1,0,0deg);
 	transform: rotate3d(0,1,0,0deg);
-	
+
 	z-index: 10;
 }
 
-.card-removed 
+.card-removed
 {
 	opacity: 0;
 }
 
-.card-0-0   {background-position: -000px -0120px;}
-.card-0-1   {background-position: -160px -0120px;}
-.card-0-2   {background-position: -320px -0120px;}
-.card-0-3   {background-position: -480px -0120px;}
-.card-0-4   {background-position: -640px -0120px;}
-.card-0-5   {background-position: -800px -0120px;}
-.card-0-6   {background-position: -960px -0120px;}
-.card-1-0   {background-position: -000px -0240px;}
-.card-1-1   {background-position: -160px -0240px;}
-.card-1-2   {background-position: -320px -0240px;}
-.card-1-3   {background-position: -480px -0240px;}
-.card-1-4   {background-position: -640px -0240px;}
-.card-1-5   {background-position: -800px -0240px;}
-.card-1-6   {background-position: -960px -0240px;}
-.card-2-0   {background-position: -000px -0360px;}
-.card-2-1   {background-position: -160px -0360px;}
-.card-2-2   {background-position: -320px -0360px;}
-.card-2-3   {background-position: -480px -0360px;}
-.card-2-4   {background-position: -640px -0360px;}
-.card-2-5   {background-position: -800px -0360px;}
-.card-2-6   {background-position: -960px -0360px;}
-.card-3-0   {background-position: -000px -0480px;}
-.card-3-1   {background-position: -160px -0480px;}
-.card-3-2   {background-position: -320px -0480px;}
-.card-3-3   {background-position: -480px -0480px;}
-.card-3-4   {background-position: -640px -0480px;}
-.card-3-5   {background-position: -800px -0480px;}
-.card-3-6   {background-position: -960px -0480px;}
-.card-4-0   {background-position: -000px -0600px;}
-.card-4-1   {background-position: -160px -0600px;}
-.card-4-2   {background-position: -320px -0600px;}
-.card-4-3   {background-position: -480px -0600px;}
-.card-4-4   {background-position: -640px -0600px;}
-.card-4-5   {background-position: -800px -0600px;}
-.card-4-6   {background-position: -960px -0600px;}
-.card-5-0   {background-position: -000px -0720px;}
-.card-5-1   {background-position: -160px -0720px;}
-.card-5-2   {background-position: -320px -0720px;}
-.card-5-3   {background-position: -480px -0720px;}
-.card-5-4   {background-position: -640px -0720px;}
-.card-5-5   {background-position: -800px -0720px;}
-.card-5-6   {background-position: -960px -0720px;}
-.card-6-0   {background-position: -000px -0840px;}
-.card-6-1   {background-position: -160px -0840px;}
-.card-6-2   {background-position: -320px -0840px;}
-.card-6-3   {background-position: -480px -0840px;}
-.card-6-4   {background-position: -640px -0840px;}
-.card-6-5   {background-position: -800px -0840px;}
-.card-6-6   {background-position: -960px -0840px;}
-.card-7-0   {background-position: -000px -0960px;}
-.card-7-1   {background-position: -160px -0960px;}
-.card-7-2   {background-position: -320px -0960px;}
-.card-7-3   {background-position: -480px -0960px;}
-.card-7-4   {background-position: -640px -0960px;}
-.card-7-5   {background-position: -800px -0960px;}
-.card-7-6   {background-position: -960px -0960px;}
+/* HORIZONTAIS */
+.card-h-0-0   {background-position: -000px -0120px;}
+.card-h-0-1   {background-position: -160px -0120px;}
+.card-h-0-2   {background-position: -320px -0120px;}
+.card-h-0-3   {background-position: -480px -0120px;}
+.card-h-0-4   {background-position: -640px -0120px;}
+.card-h-0-5   {background-position: -800px -0120px;}
+.card-h-0-6   {background-position: -960px -0120px;}
+.card-h-1-0   {background-position: -000px -0240px;}
+.card-h-1-1   {background-position: -160px -0240px;}
+.card-h-1-2   {background-position: -320px -0240px;}
+.card-h-1-3   {background-position: -480px -0240px;}
+.card-h-1-4   {background-position: -640px -0240px;}
+.card-h-1-5   {background-position: -800px -0240px;}
+.card-h-1-6   {background-position: -960px -0240px;}
+.card-h-2-0   {background-position: -000px -0360px;}
+.card-h-2-1   {background-position: -160px -0360px;}
+.card-h-2-2   {background-position: -320px -0360px;}
+.card-h-2-3   {background-position: -480px -0360px;}
+.card-h-2-4   {background-position: -640px -0360px;}
+.card-h-2-5   {background-position: -800px -0360px;}
+.card-h-2-6   {background-position: -960px -0360px;}
+.card-h-3-0   {background-position: -000px -0480px;}
+.card-h-3-1   {background-position: -160px -0480px;}
+.card-h-3-2   {background-position: -320px -0480px;}
+.card-h-3-3   {background-position: -480px -0480px;}
+.card-h-3-4   {background-position: -640px -0480px;}
+.card-h-3-5   {background-position: -800px -0480px;}
+.card-h-3-6   {background-position: -960px -0480px;}
+.card-h-4-0   {background-position: -000px -0600px;}
+.card-h-4-1   {background-position: -160px -0600px;}
+.card-h-4-2   {background-position: -320px -0600px;}
+.card-h-4-3   {background-position: -480px -0600px;}
+.card-h-4-4   {background-position: -640px -0600px;}
+.card-h-4-5   {background-position: -800px -0600px;}
+.card-h-4-6   {background-position: -960px -0600px;}
+.card-h-5-0   {background-position: -000px -0720px;}
+.card-h-5-1   {background-position: -160px -0720px;}
+.card-h-5-2   {background-position: -320px -0720px;}
+.card-h-5-3   {background-position: -480px -0720px;}
+.card-h-5-4   {background-position: -640px -0720px;}
+.card-h-5-5   {background-position: -800px -0720px;}
+.card-h-5-6   {background-position: -960px -0720px;}
+.card-h-6-0   {background-position: -000px -0840px;}
+.card-h-6-1   {background-position: -160px -0840px;}
+.card-h-6-2   {background-position: -320px -0840px;}
+.card-h-6-3   {background-position: -480px -0840px;}
+.card-h-6-4   {background-position: -640px -0840px;}
+.card-h-6-5   {background-position: -800px -0840px;}
+.card-h-6-6   {background-position: -960px -0840px;}
+.card-h-7-0   {background-position: -000px -0960px;}
+.card-h-7-1   {background-position: -160px -0960px;}
+.card-h-7-2   {background-position: -320px -0960px;}
+.card-h-7-3   {background-position: -480px -0960px;}
+.card-h-7-4   {background-position: -640px -0960px;}
+.card-h-7-5   {background-position: -800px -0960px;}
+.card-h-7-6   {background-position: -960px -0960px;}
+
+/*VERTICAL*/
+
+.card-v-0-0   {background-position: -000px -0120px;}
+.card-v-0-1   {background-position: -80px -0120px;}
+.card-v-0-2   {background-position: -160px -0120px;}
+.card-v-0-3   {background-position: -240px -0120px;}
+/*.card-v-0-4   {background-position: -320px -0120px;}
+.card-v-0-5   {background-position: -400px -0120px;}
+.card-v-0-6   {background-position: -960px -0120px;}*/
+.card-v-1-0   {background-position: -000px -0240px;}
+.card-v-1-1   {background-position: -80px -0240px;}
+.card-v-1-2   {background-position: -160px -0240px;}
+.card-v-1-3   {background-position: -240px -0240px;}
+/*.card-v-1-4   {background-position: -320px -0240px;}
+.card-v-1-5   {background-position: -400px -0240px;}
+.card-v-1-6   {background-position: -480px -0240px;}
+*/.card-v-2-0   {background-position: -000px -0360px;}
+.card-v-2-1   {background-position: -80px -0360px;}
+.card-v-2-2   {background-position: -160px -0360px;}
+.card-v-2-3   {background-position: -240px -0360px;}
+.card-v-2-4   {background-position: -320px -0360px;}
+.card-v-2-5   {background-position: -400px -0360px;}
+/*.card-v-2-6   {background-position: -480px -0360px;}
+*/.card-v-3-0   {background-position: -000px -0480px;}
+.card-v-3-1   {background-position: -80px -0480px;}
+.card-v-3-2   {background-position: -160px -0480px;}
+.card-v-3-3   {background-position: -240px -0480px;}
+.card-v-3-4   {background-position: -320px -0480px;}
+.card-v-3-5   {background-position: -400px -0480px;}
+/*.card-v-3-6   {background-position: -480px -0480px;}
+*/.card-v-4-0   {background-position: -000px -0600px;}
+.card-v-4-1   {background-position: -80px -0600px;}
+.card-v-4-2   {background-position: -160px -0600px;}
+.card-v-4-3   {background-position: -240px -0600px;}
+.card-v-4-4   {background-position: -320px -0600px;}
+.card-v-4-5   {background-position: -400px -0600px;}
+.card-v-4-6   {background-position: -480px -0600px;}
+.card-v-4-7   {background-position: -560px -0600px;}
+.card-v-5-0   {background-position: -000px -0720px;}
+.card-v-5-1   {background-position: -80px -0720px;}
+.card-v-5-2   {background-position: -160px -0720px;}
+.card-v-5-3   {background-position: -240px -0720px;}
+.card-v-5-4   {background-position: -320px -0720px;}
+.card-v-5-5   {background-position: -400px -0720px;}
+.card-v-5-6   {background-position: -480px -0720px;}
+.card-v-5-7   {background-position: -560px -0720px;}
+.card-v-6-0   {background-position: -000px -0840px;}
+.card-v-6-1   {background-position: -80px -0840px;}
+.card-v-6-2   {background-position: -160px -0840px;}
+.card-v-6-3   {background-position: -240px -0840px;}
+.card-v-6-4   {background-position: -320px -0840px;}
+.card-v-6-5   {background-position: -400px -0840px;}
+.card-v-6-6   {background-position: -480px -0840px;}
+.card-v-7-0   {background-position: -000px -0960px;}
+.card-v-7-1   {background-position: -80px -0960px;}
+.card-v-7-2   {background-position: -160px -0960px;}
+.card-v-7-3   {background-position: -240px -0960px;}
+.card-v-7-4   {background-position: -320px -0960px;}
+.card-v-7-5   {background-position: -400px -0960px;}
+.card-v-7-6   {background-position: -480px -0960px;}
