--- a/css/style.jogo.css
+++ b/css/style.jogo.css
@@ -187,6 +187,7 @@
 
 /*VERTICAL*/
 
+/* FACIL */
 .card-v-0-0   {background-position: -000px -0120px;}
 .card-v-0-1   {background-position: -80px -0120px;}
 .card-v-0-2   {background-position: -160px -0120px;}
@@ -201,7 +202,9 @@
 /*.card-v-1-4   {background-position: -320px -0240px;}
 .card-v-1-5   {background-position: -400px -0240px;}
 .card-v-1-6   {background-position: -480px -0240px;}
-*/.card-v-2-0   {background-position: -000px -0360px;}
+*/
+/* MEDIO */
+.card-v-2-0   {background-position: -000px -0360px;}
 .card-v-2-1   {background-position: -80px -0360px;}
 .card-v-2-2   {background-position: -160px -0360px;}
 .card-v-2-3   {background-position: -240px -0360px;}
@@ -215,7 +218,9 @@
 .card-v-3-4   {background-position: -320px -0480px;}
 .card-v-3-5   {background-position: -400px -0480px;}
 /*.card-v-3-6   {background-position: -480px -0480px;}
-*/.card-v-4-0   {background-position: -000px -0600px;}
+*/
+/* DIFICIL */
+.card-v-4-0   {background-position: -000px -0600px;}
 .card-v-4-1   {background-position: -80px -0600px;}
 .card-v-4-2   {background-position: -160px -0600px;}
 .card-v-4-3   {background-position: -240px -0600px;}
